[project]
name = "medical"
version = "0.1.0"
description = "Medical using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
medical = "medical.main:run"
run_crew = "medical.main:run"
train = "medical.main:train"
replay = "medical.main:replay"
test = "medical.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
